# jellysync

./: README.md  pyproject.toml
src/jellysync/: __init__.py  config.py  jellysync.py  types.py
