[project]
name = "jellysync"
version = "0.6.2"
description = "Sync content between Jellyfin servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "argcomplete>=3.6.2",
  "httpx>=0.27.2",
  "pathvalidate>=3.2.1",
  "pyright>=1.1.401",
  "rich>=13.8.0",
  "toml>=0.10.2",
]

[project.scripts]
jellysync = "jellysync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
